--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ ExternalProject_Add(qtcsv
   GIT_REPOSITORY https://github.com/iamantony/qtcsv.git
   GIT_TAG        v1.7
   SOURCE_DIR    ${CMAKE_BINARY_DIR}/qtcsv_src
-  CMAKE_ARGS -DCMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH} -DBUILD_TESTS=OFF -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/qtcsv_install
+  LIST_SEPARATOR |
+  CMAKE_ARGS ${ADDITIONAL_CMAKE_ARGS} -DCMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH} -DBUILD_TESTS=OFF -DCMAKE_INSTALL_PREFIX=${CMAKE_BINARY_DIR}/qtcsv_install
   STEP_TARGETS   build)
 
 file(GLOB SRCS src/*.cpp src/*.h)
