set release mode on Windows

--- a/img/app.rc
+++ b/img/app.rc
@@ -1,1 +1,1 @@
-IDI_ICON1               ICON    DISCARDABLE     "EvidentaFiscala.ico"
+IDI_ICON1               ICON    DISCARDABLE     "FiscalRecords.ico"
