--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,8 @@ file(GLOB_RECURSE QML_FILES
 qt_add_qml_module(${PROJECT_NAME}
     URI ${PROJECT_NAME}
     OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/qml
+    RESOURCE_PREFIX /
+    NO_RESOURCE_TARGET_PATH
     VERSION 1.0
     QML_FILES ${QML_FILES}
 )
