--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,7 @@ if (CMAKE_BUILD_TYPE MATCHES "^[Rr]el")
     set(CPACK_RESOURCE_FILE_README ${CMAKE_BINARY_DIR}/README.txt)
     set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_BINARY_DIR}/LICENSE.txt)
     set(CPACK_PACKAGE_CONTACT "cristeab@gmail.com")
+    set(CPACK_PACKAGE_VENDOR "Bogdan Cristea")
     set(CPACK_STRIP_FILES ${PROJECT_NAME})
     include(CPack)
 endif ()
