corrected Win installer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,7 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONF
 if (CMAKE_BUILD_TYPE MATCHES "^[Rr]el")
     install(TARGETS ${PROJECT_NAME}
         BUNDLE DESTINATION .
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        RUNTIME DESTINATION .
         COMPONENT ${PROJECT_NAME}
     )
 
