Migrates to Qt Graphs for income visualization
Replaces Qt Charts with Qt Graphs for improved income visualization capabilities.

This change streamlines the graphing process and leverages the capabilities of Qt Graphs for better performance and flexibility.
It migrates IncomeView.qml to use the new GraphsView component, including relevant properties and signal handling.
Additionally, the application class is updated to inherit from QGuiApplication.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,12 +23,12 @@ configure_file(${CMAKE_SOURCE_DIR}/src/config.h.cmake ${CMAKE_BINARY_DIR}/config
 find_package(Qt6 REQUIRED COMPONENTS
     Core
     Quick
-    Charts
+    Graphs
     LinguistTools)
 target_link_libraries(${PROJECT_NAME} PRIVATE
     Qt6::Core
     Qt6::Quick
-    Qt6::Charts)
+    Qt6::Graphs)
 
 # Set up the project with Qt standard configurations
 qt_standard_project_setup()
